# elements-rs

./: .gitignore  Cargo.toml  README.md  prek.toml
.github/workflows/: rust.yml
builder/: Cargo.toml  isotopes_data.json
builder/src/: main.rs
src/: allowed_valences.rs  as_ref.rs  atomic_number.rs  atomic_radius.rs  bonds_number.rs  charged_valences.rs  classification.rs  covalent_radius.rs  display.rs  electronegativity.rs  element_mask.rs  errors.rs  from.rs  from_str.rs  from_stream.rs  isotopes.rs  lib.rs  name.rs  orbitals.rs  oxidation_states.rs  periodic_table.rs  principal_quantum_number.rs  standard_atomic_weight.rs  symbol.rs  try_from.rs  valence_electrons.rs  van_der_waals_radius.rs
src/from/: integer.rs  u8.rs
src/isotopes/: actinium.rs  aluminium.rs  americium.rs  antimony.rs  arbitrary.rs  arbitrary_impl.rs  argon.rs  arsenic.rs  astatine.rs  barium.rs  berkelium.rs  beryllium.rs  bismuth.rs  bohrium.rs  boron.rs  bromine.rs  cadmium.rs  caesium.rs  calcium.rs  californium.rs  carbon.rs  cerium.rs  chlorine.rs  chromium.rs  cobalt.rs  copernicium.rs  copper.rs  curium.rs  darmstadtium.rs  display.rs  dubnium.rs  dysprosium.rs  einsteinium.rs  element_isotopes.rs  element_variant.rs  erbium.rs  europium.rs  fermium.rs  flerovium.rs  fluorine.rs  (+90 more)
src/orbitals/: element.rs
